# mf

./: .geanyprj  .gitignore  CMakeLists.txt  CONTENTS  CONVENTIONS  Doxyfile  Makefile  Makefile.darwin  Makefile.linux  README.md  TODO  _config.yml  _config.yml~  acmmm.md  build.bat  build.sh  copyright.py  debug.txt  debug_.txt  debug_mpx.txt  debug_node.txt  debug_seek.txt  debug_txt  debugtest.sh  fg.gv  filter.markdown  gr.gv  graph.gv  graph.markdown  index.html  index.md  instructions.markdown  instructions.md  libmf.dylib  manual.md  mf.geany  ndarr.rtf  ndarr2.rtf  ndarr3.rtf  params.json  (+7 more)
_includes/: footer.html  head.html
_manual/: code.md  elem.md  filter.md  graph.md  instructions.md  ndarray.md
_posts/: 2016-05-20-welcome-to-jekyll.markdown
doxygen/: angle_8cc.html  angle_8h.html  angle_8h_source.html  annotated.html  async__node_8cc.html  async__node_8h.html  async__node_8h_source.html  bounding__box_8cc.html  bounding__box_8h.html  bounding__box_8h_source.html  camera_8cc.html  camera_8h.html  camera_8h_source.html  camera__range__point__cloud_8h.html  camera__range__point__cloud_8h_source.html  classcv_1_1_data_type_3_1_1mf_1_1rgb__color_01_4-members.html  classcv_1_1_data_type_3_1_1mf_1_1rgb__color_01_4.html  classcv_1_1_data_type_3_1_1mf_1_1ycbcr__color_01_4-members.html  classcv_1_1_data_type_3_1_1mf_1_1ycbcr__color_01_4.html  classes.html  classmf_1_1camera-members.html  classmf_1_1camera.html  classmf_1_1camera__range__point__cloud-members.html  classmf_1_1camera__range__point__cloud.html  classmf_1_1depth__camera-members.html  classmf_1_1depth__camera.html  classmf_1_1depth__image__camera-members.html  classmf_1_1depth__image__camera.html  classmf_1_1elem__tuple-members.html  classmf_1_1elem__tuple.html  classmf_1_1elem__tuple_3_01_first__elem_01_4-members.html  classmf_1_1elem__tuple_3_01_first__elem_01_4.html  classmf_1_1event-members.html  classmf_1_1event.html  classmf_1_1flow_1_1async__node-members.html  classmf_1_1flow_1_1async__node.html  classmf_1_1flow_1_1async__node__output-members.html  classmf_1_1flow_1_1async__node__output.html  classmf_1_1flow_1_1color__converter__filter-members.html  classmf_1_1flow_1_1color__converter__filter.html  (+450 more)
epipolar/: index.html  sketch.js
others/: pullsim2.xml
paper/: paper.odt  paper.tex  stat.xlsx
prog/: backproject.cc  backproject.txt  depth_tblur.cc  downscale.cc  pass.cc  pass.txt  stereo.cc  syn.cc  syn.txt  synall.cc  view_synthesis.cc  view_synthesis.cc.txt  yuv2video.cc
src/: CONTENTS  color.cc  color.h  color_converter.h  common.h  config.h  debug.cc  debug.h  debug.tcc  eigen.h  elem.h  elem_tuple.h  exceptions.h  generate_header.py  image.h  init.cc  integral_array_constant.h  masked_elem.h  media_graph.h  media_node.h  media_node.tcc  mf_exports.h  ndarray.h  ndarray.tcc  ndarray_iterator.h  ndarray_iterator.tcc  ndarray_ring.h  ndarray_ring.tcc  ndarray_shared_ring.h  ndarray_shared_ring.tcc  ndarray_timed_ring.h  ndarray_timed_ring.tcc  ndarray_view.h  ndarray_view.tcc  ndcoord.h  ndspan.h  node.h  node.tcc  opencv.h  opencv_ndarray.h  (+13 more)
test/: elem.cc  elem_tuple.cc  event.cc  flow_activation.cc  flow_forward.cc  flow_multiplex.cc  flow_nonseekable_async.cc  flow_nonseekable_mixed.cc  flow_nonseekable_sync.cc  flow_seekable.cc  flow_seekable_async.cc  flow_seekable_mixed.cc  flow_seekable_sync.cc  flow_tests.icc  flow_tests_basic.icc  flow_tests_seek.icc  image.cc  image_view.cc  main.cc  media_graph.cc  media_graph.cc.txt  media_graph_parallel.cc  media_graph_parallel.cc.txt  media_graph_seekable.cc  mf  ndarray.cc  ndarray_forward_shared_ring.cc  ndarray_ring.cc  ndarray_seekable_shared_ring.cc  ndarray_shared_ring.cc  ndarray_timed_ring.cc  ndarray_view.cc  ndarray_view_cast.cc  ndarray_view_generic.cc  ndspan.cc  (+2 more)
(+1581 files in other folders)
